[package]
name = "assignment_twelve"
version = "0.1.0"
authors = ["Ankit Mogha <ankit.mogha@knoldus.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
async-std = "1.9.0"
log = "*"
env_logger = "0.8.3"